2009-08-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/utils.js: if an item
	changes during a calendar refresh, we must fetch the new item from
	the calendar and bind it to the editing/summary dialog. Otherwise
	the old version is still used.

2009-08-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	modified to handle "valid-sync-token" synchronization errors.

	* chrome/content/sogo-connector/calendar/calendar-summary-dialog.xul:
	new version of the overlay, only for including utils.js and
	thereby have access to our version of isCalendarWritable.

	* js/CalDAVAclManager.js: we remove the entries pertaining to
	subitems when a refresh occurs on a calendar entry.

2009-08-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/calendar/calendar-summary-dialog.{js,xul}:
	removed overlays, modified code put back in Lightning (inverse edition).

2009-07-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js
	We now keep custom fields between roundtrips.
	See http://www.scalableogo.org/bugs/view.php?id=32

2009-07-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/calendar/utils.js: overriden
	"openDialog" to force a refresh of the item calendar before
	displaying the dialog IF the item is an invitation or is read-only.

2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*
	chrome/content/sogo-connector/calendar/calendars-list-overlay.js:
	fixed an exception occuring when no calendar is selected.

	* chrome/content/inverse-library/sogoWebDAV.js: fixed a bug
	occuring in the XML to JSON converter when the parsed response is
	not flattened.

	* js/CalDAVAclManager.js: we trigger the
	"caldav-component-acl-loaded" or "caldav-component-acl-reset" to
	notify observers that the event entries are ready.

2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	*